--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <li><a href="catalogo.html">Catálogo</a></li>
         <li><a href="fuentes.html">Fuentes</a></li>
         <li><a href="tabla.html">Tabla</a></li>
-        <li><a href="colores.html">Colores</a>
+        <li><a href="colores.html">Colores</a></li>
+        <li><a href="media-query.html">Media-Query</a></li>
             <li><a href="menu-horizontal.html">Menu Horizontal</a>
             <ul>
                 <li><a href="fuente Game Of Thrones.html">Fuente Game Of Thrones</a></li>
