--- a/media-query.html
+++ b/media-query.html
@@ -10,9 +10,9 @@
    
 </head>
 <body>
-    <nav class="main-nav">
+    <nav id="mainNav" class="main-nav">
         <span id="menuBar" class="menu-bar">&#9776</span>
-        <ul class="main-menu-blok">
+        <ul id="mainMenu" class="main-menu">
             <li class="item-style"><a href="#">Menú</a></li>
             <li class="item-style"><a href="#">Contactenos</a></li>
             <li class="item-style"><a href="#">Horario de Atencion</a></li>
