--- a/colores.html
+++ b/colores.html
@@ -26,6 +26,6 @@
         <div class="box-style box-87CEFA">color<br>#87CEFA</div>
         <div class="box-style box-FAEBD7">color<br>#FAEBD7</div>
         <div class="box-style box-FFD700 ">color<br>#FFD700</div>
-    </div>
+    </div>9
 </body>
 </html>
