--- a/menu-subitems.html
+++ b/menu-subitems.html
@@ -16,8 +16,7 @@
                 <ul>
                     <li><a href="#">Caqueta</a></li>
                     <li><a href="#">Cauca</a></li>
-                    <li><a href="#">Huila</a>
-                        <i i="flechita"class="fa-solid fa-chevron-right"></i>
+                    <li><a href="#">Huila<i id="f" class="fa-solid fa-chevron-right"></i></a>
                         <ul>
                             <li><a href="#">Neiva</a></li>
                             <li><a href="#">Pitalito</a></li>
