--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <h4>Programación</h4>
     </div>
     <nav id="mainNav" class="main-nav">
-        <!-- <span id="hamburguer" class="menu-bar">&#9776</span> -->
+        <li class="style-icon">
+        <i class="fa-solid fa-face-smile-wink"></i>
+        </li>
+        <!-- <i id="hamburguer" class="menu-bar">&#9776</span> -->
         <ul id="mainMenu" class="main-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="listas.html">Listas</a></li>
