--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="menu-horizontal.html">Menu Horizontal</a></li>
             <li><a href="menu-subitems.html">Menu Subitems</a></li>
             <li><a href="transitions.html">Transitions</a></li>
+            <li><a href="flexbox.html">Flecbox</a></li>
             <ul>
                 <li><a href="fuente Game Of Thrones.html">Fuente Game Of Thrones</a></li>
                 <li><a href="fuente Netflix.html">Fuente Netflix</a></li>
