--- a/calendario.html
+++ b/calendario.html
@@ -9,14 +9,14 @@
 <body>
     <div class="main-box">
        <div class="calendario-box">    
-        <div class="box-celda nombre-mes">agosto 2023</div>
-        <div class="nombre-dia">domingo</div>
-        <div class="nombre-dia">lunes</div>
-        <div class="nombre-dia">martes</div>
-        <div class="nombre-dia">miercoles</div>
-        <div class="nombre-dia">jueves</div>
-        <div class="nombre-dia">viernes</div>
-        <div class="nombre-dia">sabado</div>   
+        <div class="box-celda nombre-mes">Agosto 2023</div>
+        <div class="nombre-dia">Domingo</div>
+        <div class="nombre-dia">Lunes</div>
+        <div class="nombre-dia">Martes</div>
+        <div class="nombre-dia">Miercoles</div>
+        <div class="nombre-dia">Jueves</div>
+        <div class="nombre-dia">Viernes</div>
+        <div class="nombre-dia">Sabado</div>   
         <div class="box-celda box-1"></div>
         <div class="box-celda box-2"></div> 
         <div class="box-celda box-1">1</div>
