--- a/maquetacion.html
+++ b/maquetacion.html
@@ -9,49 +9,60 @@
 <body>
     <header>
         <div class="logo style-box">
-            Logo
+            <img class="img-logo" src="img/pokemon logo.png">
         </div>
-        <div class="menu style-box">
-            Menu
+        <div class="menu">
+            <nav id="mainNav" class="main-nav">
+                <span id="menuBar"class="menu-bar">&#9776</span>
+                <ul id="mainMenu" class="main-menu">
+                <li class="item-style"><a href="">Inicio</a></li>
+                <li class="item-style"><a href="">Noticias</a></li>
+                <li class="item-style"><a href="">Ubicación</a></li>
+                <li class="item-style"><a href="">Trajes</a></li>
+                <li class="item-style"><a href="">Contacto</a></li>
+                <li class="item-style"><a href="">Redes</a></li>
+                </ul>
+            </nav>
+            <script src="js/maquetacion.js"></script>
         </div>
     </header>
     <div class="main-contents">
         <div class="img-principal style-box">
-            Imagen principal
+                <img class="img-fondo-grande" src="img/pokemosn prin2338x1406.jpg">
         </div>
         <div class="article article-1">
             <div class="img-article-1 style-box style-img-article">
-                Img-article-1
+                <img class="img-fondo" src="img/pokemin 2  500x500.jpg">
             </div>
             <div class="texto-article-1 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit beatae repellat sed necessitatibus consequatur! Eos, veritatis totam doloribus aut consequatur, nemo quas enim error, tenetur qui rerum. Rerum, quo architecto.</div>
         </div>
         <div class="article article-2">
             <div class="img-article-2 style-box style-img-article">
-                Img-article-2
+                <img class="img-fondo" src="img/pokemon 3.webp">
             </div>
             <div class="texto-article-2 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quos velit expedita culpa sequi quae sint veniam, dolorem dolor qui blanditiis, provident delectus magnam eligendi. Modi consectetur dicta sit magni neque similique, iusto est ullam quis ipsam sequi voluptates tempore.</div>
         </div>
         <div class="article article-3">
             <div class="img-article-3 style-box style-img-article">
-                Img-article-3
+                <img class="img-fondo" src="img/pokemon 4.jpeg">
             </div>
             <div class="texto-article-3 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quos velit expedita culpa sequi quae sint veniam, dolorem dolor qui blanditiis, provident delectus magnam eligendi. Modi consectetur dicta sit magni neque similique, iusto est ullam quis ipsam sequi voluptates tempore.</div>
         </div>
         <div class="article article-4">
             <div class="img-article-4 style-box style-img-article">
-                Img-article-4
+                <img class="img-fondo" src="img/pokemon 77.jpg">
             </div>
             <div class="texto-article-4 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quos velit expedita culpa sequi quae sint veniam, dolorem dolor qui blanditiis, provident delectus magnam eligendi. Modi consectetur dicta sit magni neque similique, iusto est ullam quis ipsam sequi voluptates tempore.</div>
         </div>
         <div class="article article-5">
             <div class="img-article-5 style-box style-img-article">
-                Img-article-5
+                <img class="img-fondo" src="img/pokemon 6.jpg">
             </div>
             <div class="texto-article-5 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quos velit expedita culpa sequi quae sint veniam, dolorem dolor qui blanditiis, provident delectus magnam eligendi. Modi consectetur dicta sit magni neque similique, iusto est ullam quis ipsam sequi voluptates tempore.</div>
         </div>
         <div class="article article-6">
             <div class="img-article-6 style-box style-img-article">
-                Img-article-6
+                <img class="img-fondo" src="img/pokemon 8.jpg">
             </div>
             <div class="texto-article-6 style-texto-article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque nostrum nihil deserunt illo dolore facere ratione quod porro consequuntur dolorum maxime cum commodi culpa soluta illum cumque, minus assumenda asperiores natus dolores optio. Voluptatum voluptate ullam dolorem atque labore! Assumenda?</div>
     </div>
