--- a/starbucks.html
+++ b/starbucks.html
@@ -31,6 +31,11 @@
             <img src="img/img1.png" alt="">
         </div>
     </div>
+    <footer>
+        <img class="style-img-mini"src="img/thumb1.png" alt="">
+        <img class="style-img-mini"src="img/thumb2.png" alt="">
+        <img class="style-img-mini"src="img/thumb3.png" alt="">
+    </footer>
     <div class="main-circle"></div>
     <div class="redes-links">
         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
