--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- <i id="hamburguer" class="menu-bar">&#9776</span> -->
         <ul id="mainMenu" class="main-menu">
             <li><a href="index.html">Inicio</a></li>
+            <li><a href="mi-portafolio.html">Portafolio</a></li>
             <li><a href="listas.html">Listas</a></li>
             <li><a href="margenes.html">Margenes</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
