--- a/starbucks.html
+++ b/starbucks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>starbucks</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/starbucks.css">
     <link rel="stylesheet" href="icons/all.css">
 </head>
@@ -16,31 +16,32 @@
             <ul class="main-menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">what's New</a></li>
+                <li><a href="#">What's New</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </header>
     <div class="main-content">
         <div class="product-text">
-            <h1>It's not just coffee<br>It's <spam class="title-color">Starbucks</spam></h1>
-            <h3 class="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sit dicta repellat ab odio delectus reiciendis. Itaque doloribus odit velit dolores minus. Dignissimos, corporis, recusandae id et, magni ut unde minima veritatis esse eius magnam accusantium?</h3>
-            <input class="button-learn"type="button" value="learn more">
+            <h1>It´s not just Coffee<br>It's <span class="title-color">Starbucks</span></h1>
+            <h3 class="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis molestiae quas doloribus. Facilis ratione, provident molestiae fugiat dolorem eius cumque reprehenderit, dignissimos neque quod omnis, dolores id voluptatum! Blanditiis quod adipisci nam hic fugit soluta</h3>
+            <input class="button-learn" type="button" value="LEARN MORE">
         </div>
         <div class="product-img">
-            <img src="img/img1.png" alt="">
+            <img id="iceStarbucks" src="img/img2.png" alt="Ice Starbucks">
+        </div>
+        <div class="social-media">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="style-img-mini fa-brands fa-twitter"></i>
+            <i class="style-img-mini fa-brands fa-instagram"></i>
         </div>
     </div>
     <footer>
-        <img class="style-img-mini"src="img/thumb1.png" alt="">
-        <img class="style-img-mini"src="img/thumb2.png" alt="">
-        <img class="style-img-mini"src="img/thumb3.png" alt="">
+        <img id="miniGreen" class="style-img-mini mini-green" src="img/thumb1.png" alt="">
+        <img id="miniLightPink" class="style-img-mini mini-light-pink" src="img/thumb2.png" alt="">
+        <img id="miniDarkPink" class="style-img-mini mini-dark-pink" src="img/thumb3.png" alt="">
     </footer>
-    <div class="main-circle"></div>
-    <div class="redes-links">
-        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-    </div>
+    <div id="mainCircle" class="main-circle main-circle-green"></div>
+    <script src="js/starbucks.js"></script>
 </body>
 </html>
