--- a/discord.html
+++ b/discord.html
@@ -25,7 +25,7 @@
             </nav>
         </div>
         <div class="btn-login">
-            <button class="botton">Login...</button>   
+            <button class="botton">Carga...</button>   
         </div>
     </header>
     <div class="main-contents">
