--- a/discord.html
+++ b/discord.html
@@ -17,26 +17,91 @@
             <nav id="mainNav" class="main-nav">
                 <span id="menuBar"class="menu-bar">&#9776</span>
                 <ul id="mainMenu" class="main-menu">
-                <li class="item-style"><a href="">Inicio</a></li>
-                <li class="item-style"><a href="">Noticias</a></li>
-                <li class="item-style"><a href="">Ubicación</a></li>
-                <li class="item-style"><a href="">Trajes</a></li>
+                <li class="item-style"><a href="">Download</a></li>
+                <li class="item-style"><a href="">Nitro</a></li>
+                <li class="item-style"><a href="">Discover</a></li>
+                <li class="item-style"><a href="">Safety</a></li>
+                <li class="item-style"><a href="">Support</a></li>
+                <li class="item-style"><a href="">Careers</a></li>
+                
                 </ul>
             </nav>
         </div>
-        <div class="btn-login">
-            <button class="botton">Carga...</button>   
+        <div class="box-btn-login">
+            <div class="btn-login">
+                <span class="botton">Login</span>   
+            </div>
         </div>
     </header>
     <div class="main-contents">
         <div class="img-principal style-box">
-                <img class="img-fondo-grande" src="img/principal.png">
-                <div>
-                    <h1>IMAGINA TU LUGAR...</h1>
-                </div>
+            <!-- <img class="img-fondo-grande" src="img/principal.png"> -->
+        </div> 
+        <div class="box-main-text">
+            <div class="main-text">
+                <h1>IMAGINA TU LUGAR...</h1>
                 <p class="texto-prin style-texto">... en el que puedas formar parte de un club escolar, un grupo de jugadores o una comunidad mundial de arte. En el que puedas pasar tiempo con unos cuantos amigos. Un lugar que haga que hablar a diario y divertirte más a menudo sea fácil.</p>
+                <div class="main-buttons">
+                    <button class="btn-white">Descargar para Windows</button>
+                    <button class="btn-black">Abrir Discord en tu Navegador</button>
+                </div>
+            </div>
+        </div>     
+    </div>
+    <div class="conte conte-1">
+        <div>
+            <img src="img/IMGG1.svg" alt="image1">
+        </div>
+        <div class="text-conte">
+            <h2>Crea un lugar solo para miembros en el que encajes</h2>
+            <p>Los servidores de Discord se organizan en canales ordenados por temas donde puedes colaborar, compartir o simplemente hablar de tu día sin monopolizar un chat de grupo.</p>
         </div>
     </div>
+    <div class="optional-background">
+        <div class="conte conte-2">
+            <div class="text-conte">
+                <h2>Donde es fácil pasar el rato</h2>
+                <p>Entra en un canal de voz cuando estés libre. Los amigos que tengas en tu servidor podrán ver que estás conectado y unirse al instante para hablar sin necesidad de llamar.</p>
+            </div>
+            <div>
+                <img src="img/IMGG2.svg" alt="image1">
+            </div>
+        </div>
+    </div>
+    <div class="conte conte-1">
+        <div>
+            <img src="img/IMGG3.svg" alt="image1">
+        </div>
+        <div class="text-conte">
+            <h2>De unos pocos fans a un montón</h2>
+            <p>Establece cualquier comunidad con las herramientas de moderación y el acceso personalizado de miembros. Concédeles poderes especiales, crea canales privados y mucho más.</p>
+        </div>
+    </div>
+    <div class="optional-background">
+        <div class="conte conte-3">
+            <h1>UNA TECNOLOGÍA FIABLE PARA<br> MANTENERSE EN CONTACTO</h1>
+            <p>Gracias a la voz y el vídeo de baja latencia, parece que estáis en la misma habitación. Saluda a la cámara, accede a las transmisiones de los juegos de tus amigos o reuníos y disfrutad de una sesión de dibujo compartiendo la pantalla.</p>
+            <img src="img/imagen-amplia.svg">
+            <h2>¿Todo listo para comenzar tu viaje?</h2>
+            <div class="main-buttons">
+                <button class="btn-main">Descargar para Windows</button>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="box-main-wrap box-5">
+        <div class="box-gen"><img src="img/Icono 1.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 2.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 3.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 4.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 5.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 6.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 7.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 8.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 9.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 10.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 11.png" alt=""></div>
+        <div class="box-gen"><img src="img/icono 12.png" alt=""></div>
+    </div> -->
     <script src="js/discord.js"></script>
 </body>
 </html>
