--- a/mi-portafolio.html
+++ b/mi-portafolio.html
@@ -38,6 +38,7 @@
             <li><a href="calendario.html">calendario</a></li>
             <li><a href="maquetacion.html">Maquetación</a></li>
             <li><a href="starbucks.html">starbucks</a></li>
+            <li><a href="discord.html">Discord</a></li>
             <ul>
                 <li><a href="fuente Game Of Thrones.html">Fuente Game Of Thrones</a></li>
                 <li><a href="fuente Netflix.html">Fuente Netflix</a></li>
