--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="fila">
                         <div class="col">
                             <h2>Luis Mario Alvarez</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam non quasi deserunt libero iste culpa distinctio iure deleniti ducimus labore sed.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. lorem Nam non quasi deserunt libero iste culpa distinctio iure deleniti ducimus labore sed.</p>
                             <button class="btn btn-1">Haz clic aquí
                             </button>
                         </div>
