add línea de verificación

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a href="#contacto">Contacto</a>
                             <a href="mi-portafolio.html">Portafolio</a>
                         </nav>
-        
+                        <!-- Esta línea fue añadida por Maria Fernanda -->
                         <!-- Icono del menu responsive -->
                         <div id="icono-nav" onclick="responsiveMenu()">
                             <i class="fa-solid fa-bars"></i>
