--- a/mi-portafolio.html
+++ b/mi-portafolio.html
@@ -37,7 +37,8 @@
             <li><a href="flexbox.html">Flecbox</a></li>
             <li><a href="calendario.html">calendario</a></li>
             <li><a href="maquetacion.html">Maquetación</a></li>
-            <li><a href="starbucks.html">starbucks</a></li>
+            <li><a href="starbucks.html">Starbucks</a></li>
+            <li><a href="sneaker.html">Sneakers</a></li>
             <li><a href="discord.html">Discord</a></li>
             <ul>
                 <li><a href="fuente Game Of Thrones.html">Fuente Game Of Thrones</a></li>
