--- a/sneaker.html
+++ b/sneaker.html
@@ -63,6 +63,7 @@
       <article class="gallery">
         <div class="gallery__image-container">
           <img class="gallery__previus" src="./img/icon-previous.svg" alt="previus">
+          <img class="gallery-img" src="img/image-product-1.jpg">
           <img class="gallery__next" src="./img/icon-next.svg" alt="next">
         </div>
         <div class="gallery__thumnails">
@@ -125,6 +126,7 @@
       </div>
       <div class="modal-gallery__image-container">
         <img class="modal-gallery__previus" src="./img/icon-previous.svg" alt="previus">
+        <img class="gallery-img1" src="./img/image-product-1.jpg">
         <img class="modal-gallery__next" src="./img/icon-next.svg" alt="next">
       </div>
       <div class="modal-gallery__thumnails">
