--- a/carousel.html
+++ b/carousel.html
@@ -10,16 +10,16 @@
             <i id="iconChevronLeft" class="icon-chevron-left fa-solid fa-chevron-left"></i>
             <i id="iconChevronRight" class="icon-chevron-right fa-solid fa-chevron-right"></i>
             <div class="box-img-carousel">
-                <img class="img-carousel" src="img/xtz250bannerHome.jpg" alt="">
+                <img class="img-carousel" src="img/Discord- 1.jpg" alt="">
             </div>
             <div class="box-img-carousel">
-                <img class="img-carousel" src="img/fz25bannerHome.jpg" alt="">
+                <img class="img-carousel" src="img/discord--2.jpg" alt="">
             </div>
             <div class="box-img-carousel">
-                <img class="img-carousel" src="img/xtz250bannerHome.jpg" alt="">
+                <img class="img-carousel" src="img/discord--3.jpg" alt="">
             </div>
             <div class="box-img-carousel">
-                <img class="img-carousel" src="img/Key-Visual-XSR900.jpg" alt="">
+                <img class="img-carousel" src="img/Discord-4.png" alt="">
             </div>
         </div>
     </div>
