--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/icons8-logotipo-de-la-discordia-50.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,6 +49,9 @@
             </div>
         </div>     
     </div>
+    
+
+
     <div class="conte conte-1">
         <div>
             <img src="img/IMGG1.svg" alt="image1">
@@ -88,20 +92,24 @@
             </div>
         </div>
     </div>
-    <!-- <div class="box-main-wrap box-5">
-        <div class="box-gen"><img src="img/Icono 1.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 2.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 3.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 4.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 5.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 6.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 7.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 8.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 9.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 10.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 11.png" alt=""></div>
-        <div class="box-gen"><img src="img/icono 12.png" alt=""></div>
-    </div> -->
+    <div id="boxCarousel" class="box-carousel box-carousel-1">
+        <div class="carousel">
+            <i id="iconChevronLeft" class="icon-chevron-left fa-solid fa-chevron-left"></i>
+            <i id="iconChevronRight" class="icon-chevron-right fa-solid fa-chevron-right"></i>
+            <div class="box-img-carousel">
+                <img class="img-carousel" src="img/Discord- 1.jpg" alt="">
+            </div>
+            <div class="box-img-carousel">
+                <img class="img-carousel" src="img/discord -5.jpg" alt="">
+            </div>
+            <div class="box-img-carousel">
+                <img class="img-carousel" src="img/discord--3.jpg" alt="">
+            </div>
+            <div class="box-img-carousel">
+                <img class="img-carousel" src="img/discord-6.png" alt="">
+            </div>
+        </div>
+    </div>
     <script src="js/discord.js"></script>
 </body>
 </html>
