--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
             <nav>
                 <a href="javascript:void(0)" class="borde" id="item" onclick="verCategoria('item')">Todos</a>
                 <a href="javascript:void(0)" class="" id="disenio" onclick="verCategoria('disenio')">Diseño</a>
-                <a href="javascript:void(0)" class="" id="programacion" onclick="verCategoria('programacion')">Programación</a>
-                <a href="javascript:void(0)" class="" id="animaciones" onclick="verCategoria('animaciones')">Fotografía</a>
+                <a href="javascript:void(0)" class="" id="programacion" onclick="verCategoria('programacion')">Fotografía</a>
+                <a href="javascript:void(0)" class="" id="animaciones" onclick="verCategoria('animaciones')">Programación</a>
             </nav>
     
             <div class="galeria">
                 <div class="item disenio">
-                    <img src="img/trabajo1.png" alt="">
+                    <img src="img/Ciudad en llamas-Fondo.jpg" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
@@ -240,7 +240,7 @@
                     </div>
                 </div>
                 <div class="item programacion">
-                    <img src="img/trabajo2.png" alt="">
+                    <img src="img/DSC_4866.JPG" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="item disenio">
-                    <img src="img/trabajo4.png" alt="">
+                    <img src="img/Fondo-Atardecer.jpg" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="item programacion">
-                    <img src="img/trabajo6.png" alt="">
+                    <img src="img/DSC_4878.JPG" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="item disenio">
-                    <img src="img/trabajo7.png" alt="">
+                    <img src="img/Fondo-Casa.jpg" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <div class="item programacion">
-                    <img src="img/trabajo8.png" alt="">
+                    <img src="img/DSC_4890.JPG" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="item programacion">
-                    <img src="img/trabajo9.png" alt="">
+                    <img src="img/DSC_4880.JPG" alt="">
                     <div class="info">
                         <h3>Titulo del Trabajo</h3>
                         <span>html</span><span>css</span><span>javascript</span>
