--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     <div class="col">
                         <div class="score">
                             <div class="box">
-                                <div class="chart" data-percent="45">
-                                    45%
+                                <div class="chart" data-percent="10">
+                                    10%
                                 </div>
                                 <h2>HTML & CSS</h2>
                             </div>
@@ -166,8 +166,8 @@
                     <div class="col">
                         <div class="score">
                             <div class="box">
-                                <div class="chart" data-percent="90">
-                                    90%
+                                <div class="chart" data-percent="50">
+                                    50%
                                 </div>
                                 <h2>Illustrator</h2>
                             </div>
@@ -176,8 +176,8 @@
                     <div class="col">
                         <div class="score">
                             <div class="box">
-                                <div class="chart" data-percent="20">
-                                    20%
+                                <div class="chart" data-percent="5">
+                                    5%
                                 </div>
                                 <h2>JAVASCRIPT</h2>
                             </div>
@@ -188,8 +188,8 @@
                     <div class="col">
                         <div class="score">
                             <div class="box">
-                                <div class="chart" data-percent="70">
-                                    70%
+                                <div class="chart" data-percent="50">
+                                    50%
                                 </div>
                                 <h2>Fotografía</h2>
                             </div>
@@ -208,8 +208,8 @@
                     <div class="col">
                         <div class="score">
                             <div class="box">
-                                <div class="chart" data-percent="60">
-                                    60%
+                                <div class="chart" data-percent="40">
+                                    40%
                                 </div>
                                 <h2>PHOTOSHOP</h2>
                             </div>
@@ -231,80 +231,118 @@
             </nav>
     
             <div class="galeria">
+                <div class="item animaciones">
+                    <img src="img/trabajo de programacion 6.PNG" alt="">
+                    <div class="info">
+                        <h3>Menu Horizontal</h3>
+                        <span>html</span><span>css</span>
+                        <a href="menu-horizontal.html">Ver Trabajo</a>
+                    </div>
+                </div>
                 <div class="item disenio">
                     <img src="img/Ciudad en llamas-Fondo.jpg" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Ciudad en llamas-Fondo</h3>
+                        <span>Illustrator</span>
+                        <a href="Ciudad en llamas-Fondo.html">Ver Trabajo</a>
+                    </div>
+                </div>
+                <div class="item animaciones">
+                    <img src="img/trabajo de programacion 4.PNG" alt="">
+                    <div class="info">
+                        <h3>Flecbox</h3>
+                        <span>html</span><span>css</span>
+                        <a href="flexbox.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item programacion">
                     <img src="img/DSC_4866.JPG" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Fotografía</h3>
+                        <span>Camara</span>
+                        <a href="foto2.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item animaciones">
-                    <img src="img/trabajo3.png" alt="">
+                    <img src="img/trabajo de programacion 1.PNG" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
+                        <h3>Sneakers</h3>
                         <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <a href="sneaker.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item disenio">
                     <img src="img/Fondo-Atardecer.jpg" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Atardecer-Fondo</h3>
+                        <span>Illustrator</span>
+                        <a href="Fondo-Atardecer.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item animaciones">
-                    <img src="img/trabajo5.png" alt="">
+                    <img src="img/trabajo de programacion 2.PNG" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
+                        <h3>Discord</h3>
                         <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <a href="discord.html">Ver Trabajo</a>
+                    </div>
+                </div>
+                <div class="item animaciones">
+                    <img src="img/trabajo de programacion 3.PNG" alt="">
+                    <div class="info">
+                        <h3>Tabla de Colores</h3>
+                        <span>html</span><span>css</span>
+                        <a href="colores.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item programacion">
                     <img src="img/DSC_4878.JPG" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Fotografía</h3>
+                        <span>Camara</span>
+                        <a href="foto4.html">Ver Trabajo</a>
+                    </div>
+                </div>
+                <div class="item animaciones">
+                    <img src="img/trabajo de programacion 5.PNG" alt="">
+                    <div class="info">
+                        <h3>Menu Subitems</h3>
+                        <span>html</span><span>css</span>
+                        <a href="menu-subitems.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item disenio">
                     <img src="img/Fondo-Casa.jpg" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Casa-Fondo</h3>
+                        <span>Illustrator</span>
+                        <a href="Fondo-Casa.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item programacion">
                     <img src="img/DSC_4890.JPG" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Fotografía</h3>
+                        <span>Camara</span>
+                        <a href="foto3.html">Ver Trabajo</a>
                     </div>
                 </div>
                 <div class="item programacion">
                     <img src="img/DSC_4880.JPG" alt="">
                     <div class="info">
-                        <h3>Titulo del Trabajo</h3>
-                        <span>html</span><span>css</span><span>javascript</span>
-                        <a href="#">Ver Trabajo</a>
+                        <h3>Fotografía</h3>
+                        <span>Camara</span>
+                        <a href="foto1.html">Ver Trabajo</a>
                     </div>
                 </div>
             </div>
     </section>
+    <!-- <a href="">
+        <div class="box-dir">
+            <img src="img/DSC_4880.JPG" alt="">
+            <label>Fotos</label>
+        </div>
+    </a> -->
 
     <!-- sección contacto -->
     <section class="contacto" id="contacto">
