--- a/mercado-libre.html
+++ b/mercado-libre.html
@@ -6,7 +6,8 @@
     <title>Mercado Libre</title>
     <link rel="stylesheet" href="css/mercado-libre.css">
     <link rel="stylesheet" href="icons/all.css">
-    <link rel="icon" href="img/logo-mercadolibre-1578x1090.png" type="img/png">
+    <link rel="shortcut icon" href="img/logo-mercadolibre-30x21.png" type="image/png">
+
 </head>
 <body>
     <header>
@@ -15,12 +16,22 @@
                 <img class="logo" src="img/logo-mercadolibre-150x104.png" alt="">
             </div>
             <div class="box-busqueda">
-                <i class="icon-busqueda fa-solid fa-magnifying-glass"></i>
+                <div class="box-icon-busqueda">
+                    <i class="icon-busqueda fa-solid fa-magnifying-glass"></i>
+                </div>
                 <input type="text" name="" id="" placeholder="Estoy buscando">
             </div>
-            <div class="menu-hamburguesa"></div>
-            <div class="carrito"></div>
+            <div class="menu-hamburguesa">
+                <i class="icon-style fa-solid fa-bars"></i>
+            </div>
+            <div class="carrito">
+                <i class="icon-style fa-solid fa-cart-shopping"></i>
+            </div>
         </nav>
     </header>
+    <div id="mainContent" class="main-content">
+
+    </div>
+    <script src="js/mercado-libre.js"></script>
 </body>
 </html>
