--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
                     <p>HTML: Conozco la estructura básica de HTML y cómo crear contenido web.</p>
                     <p> CSS: Tengo un conocimiento básico de estilos y diseño web.</p>
                     <p>JavaScript: Estoy en las etapas iniciales de comprender los conceptos fundamentales.</p>
-
-                    <a href="#">Leer Más</a>
                 </div>
             </div>
             <div class="col">
@@ -103,8 +101,6 @@
                         otras plataformas de diseño. A través de proyectos prácticos y mi compromiso con la mejora
                         constante, he adquirido competencias en la composición visual, la tipografía y la creación de
                         elementos gráficos atractivos. </p>
-
-                    <a href="#">Leer Más</a>
                 </div>
             </div>
             <div class="col">
@@ -118,8 +114,6 @@
                     <p>Poseo un sólido 30% de habilidades en el manejo de la herramienta After Effects, donde he
                         adquirido experiencia en diversas funciones y técnicas. Mi enfoque continuo en el aprendizaje y
                         la práctica me ha permitido ampliar constantemente mis habilidades en animación.</p>
-
-                    <a href="#">Leer Más</a>
                 </div>
             </div>
         </div>
@@ -135,37 +129,31 @@
                     <p> Aunque mi conocimiento actual se sitúa en un 20%, mi compromiso con la formación continua y la
                         participación activa en proyectos me ha permitido expandir mis habilidades y conocimientos en
                         marketing.</p>
-
-                    <a href="#">Leer Más</a>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="icono color2">
                         <div class="circulo">
-                            <i class="fa-solid fa-circle-info"></i>
+                            <i class="fa-solid fa-camera"></i>
                         </div>
                     </div>
                     <h3>Fotografía</h3>
                     <p>Mi conocimiento actual abarca la captura de imágenes, edición básica y familiaridad con diversas
                         técnicas fotográficas. Mi compromiso con la mejora continua se refleja en mi constante búsqueda
                         de nuevas tendencias, herramientas y prácticas en el campo de la fotografía.</p>
-
-                    <a href="#">Leer Más</a>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="icono color3">
                         <div class="circulo">
-                            <i class="fa-solid fa-cart-shopping"></i>
+                            <img src="img/icons8-ai-24.png" alt="">
                         </div>
                     </div>
                     <h3>Illustrator</h3>
                     <p>. Mi conocimiento actual abarca funciones fundamentales de la herramienta, y estoy constantemente
                         ampliando mis habilidades a través de proyectos prácticos y educación continua.</p>
-
-                    <a href="#">Leer Más</a>
                 </div>
             </div>
         </div>
@@ -377,7 +365,8 @@
                 <div class="col">
                     <div class="info">
                         <h3>Email:</h3>
-                        <p>luisma26a@gmail.com</p>
+                        <p>luisma26a
+                        @gmail.com</p>
                     </div>
                     <div class="info">
                         <h3>Teléfono:</h3>
